[package]
name = "slack-markov"
version = "0.1.0"
authors = ["jordanrule <jordanrule@gmail.com"]
edition = "2022"
publish = true
description = "A markov chain bot for Slack"
readme = "README.md"
repository = "https://github.com/jordanrule/slack-markov"
license = "MIT"
keywords = ["markov"]

[dependencies]
markov = "1.1.0"
rand = { version = "0.8.5", optional = true}
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["rand"]
serializer = ["serde"]
debug = []

all = ["rand", "serializer", "debug"]