[package]
name = "slack-markov"
version = "0.1.0"
authors = ["jordanrule <jordanrule@gmail.com"]
edition = "2021"
publish = true
description = "Markov Chain bot for Slack"
readme = "README.md"
repository = "https://github.com/jordanrule/slack-markov"
license = "MIT"
keywords = ["markov"]

[dependencies]
env_logger = "0.9"
log = "0.4.16"
markov = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.11"
rand = "0.8.5"
